fixed island bug causing horizontal scrollbar during animation

--- a/app/sass/components/_island.scss
+++ b/app/sass/components/_island.scss
@@ -1,10 +1,12 @@
 .island-wrap {
 	position:absolute;
-	width:100%;
+	//width:100%;
+	//background:orange;
 	text-align:center;
 	z-index:0;
 	top:40%;
-	@include transform(translate3d(0, 0, 0));
+	left:50%;
+	@include transform(translate3d(0, 0, 0) translateX(-50%));
 	@include backface-visibility(hidden);
 	@include perspective(1000);
 	//left:50%;
@@ -42,7 +44,7 @@
 	0% {
 		@include transform(scale(0));
 		//margin-top:60rem;
-		margin-top:-40%;
+		margin-top:-40rem;
 	}
 	100% {
 		@include transform(scale(1));
